// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redo_undo: add cameraGroup component prepare first step: set currentSceneTreeNode test redo operate test redo one step undo step which from first to zero, redo step which from zero to first 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-sceneTree"
  >
    <div>
      <article
        className="wonder-string-input"
      >
        <span
          className="component-label"
        >
          Name : 
        </span>
        <input
          className="input-component float-input"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value="cube"
        />
      </article>
    </div>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Transform
        </div>
      </div>
      <article
        className="wonder-inspector-transform"
      >
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            position : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
          </article>
        </div>
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            rotation : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
          </article>
        </div>
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            scale : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
          </article>
        </div>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Geometry
        </div>
        <span
          className="header-close"
          onClick={[Function]}
        >
          x
        </span>
      </div>
      <article
        className="wonder-inspector-geometry"
      >
        <div
          className="geometry-select"
        >
          Cube
          <span
            className="select-title"
            onClick={[Function]}
          >
            select
          </span>
        </div>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          RenderGroup
        </div>
        <span
          className="header-close"
          onClick={[Function]}
        >
          x
        </span>
      </div>
      <article
        className="wonder-render-group"
      >
        <div
          className=""
        >
          <div
            className=""
          >
            MeshRender : 
          </div>
          <article
            className="wonder-mesh-renderer"
          >
            <div
              className=""
            >
              <article
                className="wonder-select"
              >
                <span
                  className=""
                >
                  draw mode
                </span>
                <select
                  onChange={[Function]}
                  value="4"
                >
                  <option
                    value="0"
                  >
                    points
                  </option>
                  <option
                    value="1"
                  >
                    lines
                  </option>
                  <option
                    value="2"
                  >
                    line_loop
                  </option>
                  <option
                    value="3"
                  >
                    Line_strip
                  </option>
                  <option
                    value="4"
                  >
                    Triangles
                  </option>
                  <option
                    value="5"
                  >
                    triangle_strip
                  </option>
                  <option
                    value="6"
                  >
                    Triangle_fan
                  </option>
                </select>
              </article>
            </div>
          </article>
        </div>
        <hr />
        <div
          className=""
        >
          <div
            className=""
          >
            Material : 
          </div>
          <article
            className="wonder-material"
          >
            <div
              className="material-drag-div"
            >
              <div
                className="material-drag-name"
              />
              <div
                className="material-select"
              >
                select
              </div>
            </div>
            <div
              className=""
            >
              <article
                className="wonder-select"
              >
                <span
                  className=""
                >
                  shader
                </span>
                <select
                  onChange={[Function]}
                  value="1"
                >
                  <option
                    value="0"
                  >
                    basic_material
                  </option>
                  <option
                    value="1"
                  >
                    light_material
                  </option>
                </select>
              </article>
            </div>
            <div
              className=""
            >
              <article
                className="wonder-light-material"
              >
                <article
                  className="wonder-color-pick"
                >
                  <div
                    className=""
                  >
                    <span
                      className=""
                    >
                      diffcuse color : 
                    </span>
                    <span
                      className=""
                    >
                      #ffffff
                    </span>
                    <button
                      className=""
                      onClick={[Function]}
                    >
                      pick color
                    </button>
                  </div>
                </article>
                <article
                  className="wonder-material-texture"
                >
                  <div
                    className="texture_ground"
                    onDragEnter={[Function]}
                    onDragLeave={[Function]}
                    onDragOver={[Function]}
                    onDrop={[Function]}
                    style={
                      Object {
                        "opacity": "1",
                      }
                    }
                  />
                  <span
                    className=""
                  >
                    diffuse map : 
                  </span>
                  <img
                    src="./public/img/null.jpg"
                  />
                  <button
                    className="texture_remove"
                    onClick={[Function]}
                  >
                    remove
                  </button>
                </article>
                <article
                  className="wonder-floatInput-base"
                >
                  <article
                    className="wonder-float-input"
                  >
                    <span
                      className="component-label"
                    >
                      Shininess : 
                    </span>
                    <input
                      className="input-component float-input"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                      value="32"
                    />
                  </article>
                </article>
              </article>
            </div>
          </article>
        </div>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Camera Group
        </div>
        <span
          className="header-close"
          onClick={[Function]}
        >
          x
        </span>
      </div>
      <article
        className="wonder-camera-group"
      >
        <div
          className=""
        >
          <div
            className=""
          >
            CameView : 
          </div>
        </div>
        <article
          className="wonder-camera-view"
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              type : 
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="0"
              >
                basic_cameraView
              </option>
            </select>
          </article>
          <div
            className=""
          >
            <div
              className=""
            >
              currentCamera : 
            </div>
            <input
              defaultChecked={true}
              disabled={true}
              onClick={[Function]}
              style={
                Object {
                  "height": "35px",
                  "width": "35px",
                }
              }
              type="checkbox"
            />
          </div>
        </article>
        <hr />
        <div
          className=""
        >
          <div
            className=""
          >
            Projection : 
          </div>
          <article
            className="wonder-camera-view"
          >
            <article
              className="wonder-select"
            >
              <span
                className=""
              >
                type : 
              </span>
              <select
                onChange={[Function]}
                value="0"
              >
                <option
                  value="0"
                >
                  perspective
                </option>
              </select>
            </article>
            <article
              className="wonder-floatInput-base"
            >
              <article
                className="wonder-float-input"
              >
                <span
                  className="component-label"
                >
                  Near : 
                </span>
                <input
                  className="input-component float-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="text"
                  value="0.1"
                />
              </article>
            </article>
            <article
              className="wonder-floatInput-base"
            >
              <article
                className="wonder-float-input"
              >
                <span
                  className="component-label"
                >
                  Far : 
                </span>
                <input
                  className="input-component float-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="text"
                  value="1000"
                />
              </article>
            </article>
            <article
              className="wonder-floatInput-base"
            >
              <article
                className="wonder-float-input"
              >
                <span
                  className="component-label"
                >
                  Fovy : 
                </span>
                <input
                  className="input-component float-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="text"
                  value="60"
                />
              </article>
            </article>
          </article>
        </div>
      </article>
    </article>
    <article
      className="wonder-addable-component"
    >
      <div
        className="addable-component-content"
      >
        <button
          className="addable-btn"
          onClick={[Function]}
        >
          Add Component
        </button>
      </div>
    </article>
  </article>
</article>
`;

exports[`redo_undo: add cameraGroup component prepare first step: set currentSceneTreeNode test undo operate test not undo 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-sceneTree"
  >
    <div>
      <article
        className="wonder-string-input"
      >
        <span
          className="component-label"
        >
          Name : 
        </span>
        <input
          className="input-component float-input"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value="cube"
        />
      </article>
    </div>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Transform
        </div>
      </div>
      <article
        className="wonder-inspector-transform"
      >
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            position : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
          </article>
        </div>
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            rotation : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
          </article>
        </div>
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            scale : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
          </article>
        </div>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Geometry
        </div>
        <span
          className="header-close"
          onClick={[Function]}
        >
          x
        </span>
      </div>
      <article
        className="wonder-inspector-geometry"
      >
        <div
          className="geometry-select"
        >
          Cube
          <span
            className="select-title"
            onClick={[Function]}
          >
            select
          </span>
        </div>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          RenderGroup
        </div>
        <span
          className="header-close"
          onClick={[Function]}
        >
          x
        </span>
      </div>
      <article
        className="wonder-render-group"
      >
        <div
          className=""
        >
          <div
            className=""
          >
            MeshRender : 
          </div>
          <article
            className="wonder-mesh-renderer"
          >
            <div
              className=""
            >
              <article
                className="wonder-select"
              >
                <span
                  className=""
                >
                  draw mode
                </span>
                <select
                  onChange={[Function]}
                  value="4"
                >
                  <option
                    value="0"
                  >
                    points
                  </option>
                  <option
                    value="1"
                  >
                    lines
                  </option>
                  <option
                    value="2"
                  >
                    line_loop
                  </option>
                  <option
                    value="3"
                  >
                    Line_strip
                  </option>
                  <option
                    value="4"
                  >
                    Triangles
                  </option>
                  <option
                    value="5"
                  >
                    triangle_strip
                  </option>
                  <option
                    value="6"
                  >
                    Triangle_fan
                  </option>
                </select>
              </article>
            </div>
          </article>
        </div>
        <hr />
        <div
          className=""
        >
          <div
            className=""
          >
            Material : 
          </div>
          <article
            className="wonder-material"
          >
            <div
              className="material-drag-div"
            >
              <div
                className="material-drag-name"
              />
              <div
                className="material-select"
              >
                select
              </div>
            </div>
            <div
              className=""
            >
              <article
                className="wonder-select"
              >
                <span
                  className=""
                >
                  shader
                </span>
                <select
                  onChange={[Function]}
                  value="1"
                >
                  <option
                    value="0"
                  >
                    basic_material
                  </option>
                  <option
                    value="1"
                  >
                    light_material
                  </option>
                </select>
              </article>
            </div>
            <div
              className=""
            >
              <article
                className="wonder-light-material"
              >
                <article
                  className="wonder-color-pick"
                >
                  <div
                    className=""
                  >
                    <span
                      className=""
                    >
                      diffcuse color : 
                    </span>
                    <span
                      className=""
                    >
                      #ffffff
                    </span>
                    <button
                      className=""
                      onClick={[Function]}
                    >
                      pick color
                    </button>
                  </div>
                </article>
                <article
                  className="wonder-material-texture"
                >
                  <div
                    className="texture_ground"
                    onDragEnter={[Function]}
                    onDragLeave={[Function]}
                    onDragOver={[Function]}
                    onDrop={[Function]}
                    style={
                      Object {
                        "opacity": "1",
                      }
                    }
                  />
                  <span
                    className=""
                  >
                    diffuse map : 
                  </span>
                  <img
                    src="./public/img/null.jpg"
                  />
                  <button
                    className="texture_remove"
                    onClick={[Function]}
                  >
                    remove
                  </button>
                </article>
                <article
                  className="wonder-floatInput-base"
                >
                  <article
                    className="wonder-float-input"
                  >
                    <span
                      className="component-label"
                    >
                      Shininess : 
                    </span>
                    <input
                      className="input-component float-input"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                      value="32"
                    />
                  </article>
                </article>
              </article>
            </div>
          </article>
        </div>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Camera Group
        </div>
        <span
          className="header-close"
          onClick={[Function]}
        >
          x
        </span>
      </div>
      <article
        className="wonder-camera-group"
      >
        <div
          className=""
        >
          <div
            className=""
          >
            CameView : 
          </div>
        </div>
        <article
          className="wonder-camera-view"
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              type : 
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="0"
              >
                basic_cameraView
              </option>
            </select>
          </article>
          <div
            className=""
          >
            <div
              className=""
            >
              currentCamera : 
            </div>
            <input
              defaultChecked={true}
              disabled={true}
              onClick={[Function]}
              style={
                Object {
                  "height": "35px",
                  "width": "35px",
                }
              }
              type="checkbox"
            />
          </div>
        </article>
        <hr />
        <div
          className=""
        >
          <div
            className=""
          >
            Projection : 
          </div>
          <article
            className="wonder-camera-view"
          >
            <article
              className="wonder-select"
            >
              <span
                className=""
              >
                type : 
              </span>
              <select
                onChange={[Function]}
                value="0"
              >
                <option
                  value="0"
                >
                  perspective
                </option>
              </select>
            </article>
            <article
              className="wonder-floatInput-base"
            >
              <article
                className="wonder-float-input"
              >
                <span
                  className="component-label"
                >
                  Near : 
                </span>
                <input
                  className="input-component float-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="text"
                  value="0.1"
                />
              </article>
            </article>
            <article
              className="wonder-floatInput-base"
            >
              <article
                className="wonder-float-input"
              >
                <span
                  className="component-label"
                >
                  Far : 
                </span>
                <input
                  className="input-component float-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="text"
                  value="1000"
                />
              </article>
            </article>
            <article
              className="wonder-floatInput-base"
            >
              <article
                className="wonder-float-input"
              >
                <span
                  className="component-label"
                >
                  Fovy : 
                </span>
                <input
                  className="input-component float-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="text"
                  value="60"
                />
              </article>
            </article>
          </article>
        </div>
      </article>
    </article>
    <article
      className="wonder-addable-component"
    >
      <div
        className="addable-component-content"
      >
        <button
          className="addable-btn"
          onClick={[Function]}
        >
          Add Component
        </button>
      </div>
    </article>
  </article>
</article>
`;

exports[`redo_undo: add cameraGroup component prepare first step: set currentSceneTreeNode test undo operate test undo one step undo step which from first to zero 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-sceneTree"
  >
    <div>
      <article
        className="wonder-string-input"
      >
        <span
          className="component-label"
        >
          Name : 
        </span>
        <input
          className="input-component float-input"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value="cube"
        />
      </article>
    </div>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Transform
        </div>
      </div>
      <article
        className="wonder-inspector-transform"
      >
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            position : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
          </article>
        </div>
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            rotation : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="0"
              />
            </article>
          </article>
        </div>
        <div
          className="transform-item"
        >
          <div
            className=""
          >
            scale : 
          </div>
          <article
            className="wonder-transform-template"
          >
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                X : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Y : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
            <article
              className="wonder-float-input"
            >
              <span
                className="component-label"
              >
                Z : 
              </span>
              <input
                className="input-component float-input"
                onBlur={[Function]}
                onChange={[Function]}
                type="text"
                value="1"
              />
            </article>
          </article>
        </div>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          Geometry
        </div>
        <span
          className="header-close"
          onClick={[Function]}
        >
          x
        </span>
      </div>
      <article
        className="wonder-inspector-geometry"
      >
        <div
          className="geometry-select"
        >
          Cube
          <span
            className="select-title"
            onClick={[Function]}
          >
            select
          </span>
        </div>
      </article>
    </article>
    <article
      className="componentBox-component"
    >
      <div
        className="header"
      >
        <div
          className="header-triangle"
          onClick={[Function]}
        >
          <span
            className="triangle-bottom"
          />
        </div>
        <div
          className="header-title"
        >
          RenderGroup
        </div>
        <span
          className="header-close"
          onClick={[Function]}
        >
          x
        </span>
      </div>
      <article
        className="wonder-render-group"
      >
        <div
          className=""
        >
          <div
            className=""
          >
            MeshRender : 
          </div>
          <article
            className="wonder-mesh-renderer"
          >
            <div
              className=""
            >
              <article
                className="wonder-select"
              >
                <span
                  className=""
                >
                  draw mode
                </span>
                <select
                  onChange={[Function]}
                  value="4"
                >
                  <option
                    value="0"
                  >
                    points
                  </option>
                  <option
                    value="1"
                  >
                    lines
                  </option>
                  <option
                    value="2"
                  >
                    line_loop
                  </option>
                  <option
                    value="3"
                  >
                    Line_strip
                  </option>
                  <option
                    value="4"
                  >
                    Triangles
                  </option>
                  <option
                    value="5"
                  >
                    triangle_strip
                  </option>
                  <option
                    value="6"
                  >
                    Triangle_fan
                  </option>
                </select>
              </article>
            </div>
          </article>
        </div>
        <hr />
        <div
          className=""
        >
          <div
            className=""
          >
            Material : 
          </div>
          <article
            className="wonder-material"
          >
            <div
              className="material-drag-div"
            >
              <div
                className="material-drag-name"
              />
              <div
                className="material-select"
              >
                select
              </div>
            </div>
            <div
              className=""
            >
              <article
                className="wonder-select"
              >
                <span
                  className=""
                >
                  shader
                </span>
                <select
                  onChange={[Function]}
                  value="1"
                >
                  <option
                    value="0"
                  >
                    basic_material
                  </option>
                  <option
                    value="1"
                  >
                    light_material
                  </option>
                </select>
              </article>
            </div>
            <div
              className=""
            >
              <article
                className="wonder-light-material"
              >
                <article
                  className="wonder-color-pick"
                >
                  <div
                    className=""
                  >
                    <span
                      className=""
                    >
                      diffcuse color : 
                    </span>
                    <span
                      className=""
                    >
                      #ffffff
                    </span>
                    <button
                      className=""
                      onClick={[Function]}
                    >
                      pick color
                    </button>
                  </div>
                </article>
                <article
                  className="wonder-material-texture"
                >
                  <div
                    className="texture_ground"
                    onDragEnter={[Function]}
                    onDragLeave={[Function]}
                    onDragOver={[Function]}
                    onDrop={[Function]}
                    style={
                      Object {
                        "opacity": "1",
                      }
                    }
                  />
                  <span
                    className=""
                  >
                    diffuse map : 
                  </span>
                  <img
                    src="./public/img/null.jpg"
                  />
                  <button
                    className="texture_remove"
                    onClick={[Function]}
                  >
                    remove
                  </button>
                </article>
                <article
                  className="wonder-floatInput-base"
                >
                  <article
                    className="wonder-float-input"
                  >
                    <span
                      className="component-label"
                    >
                      Shininess : 
                    </span>
                    <input
                      className="input-component float-input"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                      value="32"
                    />
                  </article>
                </article>
              </article>
            </div>
          </article>
        </div>
      </article>
    </article>
    <article
      className="wonder-addable-component"
    >
      <div
        className="addable-component-content"
      >
        <button
          className="addable-btn"
          onClick={[Function]}
        >
          Add Component
        </button>
      </div>
    </article>
  </article>
</article>
`;
